--- a/GivrsApp/app/build.gradle
+++ b/GivrsApp/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.koushikdutta.ion:ion:2.+'
     compile 'com.amazonaws:aws-android-sdk-core:2.+'
     compile 'com.amazonaws:aws-android-sdk-cognito:2.+'
+    compile 'com.amazonaws:aws-android-sdk-lambda:2.+'
     compile "com.amazonaws:aws-android-sdk-apigateway-core:2.2.6+"
     compile 'com.google.android.gms:play-services-auth:8.3.0'
 
