--- a/GivrsApp/app/build.gradle
+++ b/GivrsApp/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:3.2.0@aar'){
         transitive=true
     }
+    compile 'me.gujun.android.taggroup:library:1.4@aar'
     compile project(':smartlocation')
 }
