--- a/GivrsApp/app/src/main/AndroidManifest.xml
+++ b/GivrsApp/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".LoginActivity" android:screenOrientation="portrait" />
         <activity android:name=".ProjectActivity" />
         <activity
             android:name=".CreateProjectActivity"></activity>
